# password-generator

./: .gitignore  CMakeLists.txt  README.md  configure.sh
src/: main.c  res.xml
src/components/: app.h  menubars.h  sections.h  shortcuts.h
src/ui/: app.ui
src/utils/: core.h
